# V-Genfoil

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: doxygen.yml  release.yml
docs/: ALGORITHMS_AND_MATH.md  DESIGN.md  vantus.css
docs/theory/: index.md
src/: main.cpp
src/geometry/: parsec.cpp  parsec.h
src/utils/: config.h
